# image-detection

./: README.md
Object/: cnn_tf.ipynb  db.sqlite3  manage.py  pyproject.toml
Object/account/: admin.py  forms.py  models.py  urls.py  views.py
Object/account/migrations/: 0001_initial.py
Object/css/: style.css
Object/imgpredict/: asgi.py  settings.py  urls.py  wsgi.py
Object/prediction/: admin.py  models.py  naive.py  urls.py  views.py
Object/prediction/migrations/: 0001_initial.py
Object/static/css/: style.css
Object/templates/: base.html
Object/templates/account/: login.html  register.html  user_details.html  user_details_tab.html
Object/templates/account/Forgetpassword/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_sent.html
Object/templates/index/: blogs.html  homechk.html  homepage.html
Object/templates/partials/: alerts.html  footer.html  header.html
Object/templates/predictionform/: form.html  prediction_pdf.html  predictionhistory.html  success.html
myproject/: db.sqlite3
myproject/myproject/: settings.py
